# germedbench

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  todo.md
data/: cases.jsonl  clinical_reasoning.jsonl  icd10_coding.jsonl  icd10gm_2025.json  med_extraction.jsonl  med_qa.jsonl  ner.jsonl  patient_text.jsonl  summarization.jsonl
docs/: idea.md
results/: latest.json
results/Qwen__Qwen2.5-72B-Instruct/clinical_reasoning/: 20260329_191912.json
results/Qwen__Qwen2.5-72B-Instruct/icd10_coding/: 20260329_171113.json
results/Qwen__Qwen2.5-72B-Instruct/med_extraction/: 20260329_214000.json
results/Qwen__Qwen2.5-72B-Instruct/med_qa/: 20260329_174325.json
results/Qwen__Qwen2.5-72B-Instruct/patient_text/: 20260329_212151.json
scripts/: build_icd10_lookup.py  generate_clinical_reasoning_cases.py  generate_icd10_cases.py  generate_med_extraction_cases.py  generate_med_qa_cases.py  generate_ner_cases.py  generate_patient_text_cases.py  generate_summarization_cases.py  run_eval_clinical_reasoning.py  run_eval_icd10.py  run_eval_med_extraction.py  run_eval_med_qa.py  run_eval_ner.py  run_eval_patient_text.py  run_eval_summarization.py
src/germedbench/: config.py  eval_helpers.py  gen_helpers.py  icd10_catalog.py  logging.py  schemas.py
web/: globals.css  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
web/app/: layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: footer.tsx  header.tsx  leaderboard-chart.tsx  theme-toggle.tsx
web/lib/: data.ts  providers.ts  types.ts
web/public/: site.webmanifest
(+198 files in other folders)
